--- a/Styles/style.css
+++ b/Styles/style.css
@@ -547,7 +547,7 @@ img {vertical-align: middle;}
   width: 100%;
   height: 700px;
   overflow-x: hidden;
-  background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.0)), url(images/web_image_background3.jpg);
+  background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.0)), url(NASA DEVELOP Website Images/2023Sum_NY_Eco_Conservation_WebsiteImage.png);
   background-size: cover;
   background-position: top left;
 }
