--- a/Styles/style.css
+++ b/Styles/style.css
@@ -2,18 +2,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Noticia+Text:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 /* Color Palette */
 :root {
-  --main: #344354; /* background color */
+  --main: #042630; /* background color */
   --lightmain: #E8EEF4;
   --alternative: #F4F6F9;
   --alternative-hover: #d5d7db;
   --primary: #B8608C;
   --dark: #2D2D34;
   --secondary: #6B8199;
-  --accent: #E8DAE1; /* for buttons and pops of color */
-  --accent2: #9E1B70;
-  --accent3: #EAAC8B;
+  --accent: #d0d6d6; /*#E8DAE1 --> magenta for buttons and pops of color */
+  --accent2: #4c7273;
+  --accent3: #86b9b0;
   --lighttext: #F4F6F9;
-  --darktext: #344354;
+  --darktext: #041421;
 }
 
 /* Backup - TEMPLATE */
