--- a/Styles/style.css
+++ b/Styles/style.css
@@ -550,6 +550,9 @@ img {vertical-align: middle;}
   background-image: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.0)), url(Images/Gulf_hagas.jpg);
   background-size: cover;
   background-position: top left;
+  background-image2: linear-gradient(rgba(0,0,0,0),rgba(0,0,0,0.0)), url(Images/Vermont.jpeg);
+  background-size: cover;
+  background-position: bottom left;
 }
 
 /* @media (max-width: 900px) {
