--- a/Styles/style.css
+++ b/Styles/style.css
@@ -1361,7 +1361,7 @@ img {vertical-align: middle;}
   }
 } */
 
-/* Second page about research interests image */
+/* Second page about research interests image 
 .geo_image {
   margin-top: -20px;
   margin-left: -40px;
@@ -1371,9 +1371,22 @@ img {vertical-align: middle;}
   height: auto;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   /* image-resolution: 300dpi; */
-  position: relative;
+ /* position: relative;
   object-fit: cover;
   object-position: right;
+}*/
+
+.geo_image {
+  margin-top: -20px;
+  margin-left: -40px;
+  margin-bottom: -40px;
+  justify-content: center;
+  width: 100%; /* Set width to 100% to make sure the image scales with its container */
+  height: auto;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.4), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  position: relative;
+  object-fit: contain; /* Use 'contain' to fit the entire image within the container */
+  object-position: center; /* Center the image within the container */
 }
 
 @media (max-width: 1000px) {
